# bonsize

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release-linux.yml
bonsize-cli/: Cargo.toml
bonsize-cli/src/: cli.rs  main.rs
bonsize-cli/src/display/: formatter.rs  mod.rs  output_format.rs
bonsize-core/: Cargo.toml
bonsize-core/src/: config.rs  lib.rs
bonsize-core/src/scanner/: cache.rs  file_model.rs  file_size.rs  mod.rs
bonsize-tauri/: eslint.config.ts  package-lock.json  package.json  vite.config.ts
bonsize-tauri/src/: App.vue  const.ts  style.css
bonsize-tauri/src-tauri/: Cargo.toml  tauri.conf.json
bonsize-tauri/src-tauri/assets/: package.desktop.hbs
bonsize-tauri/src-tauri/capabilities/: default.json
bonsize-tauri/src-tauri/src/: lib.rs  main.rs
bonsize-tauri/src/components/atoms/: confirm-modal.vue  file-representation.vue  multi-button.vue  snipper-loader.vue  toast-notification.vue  toggle-button-group.vue
bonsize-tauri/src/components/molecules/: header-with-pick-folders.vue  pick-folder-buttons.vue
bonsize-tauri/src/components/molecules/context-menu/: context-menu.vue  useContextMenu.ts
bonsize-tauri/src/components/molecules/files-list/: files-list.vue  loader-files-list.vue
bonsize-tauri/src/components/pages/: folder-details.vue  home-page.vue
bonsize-tauri/src/models/: FileModel.ts  SizeType.ts
bonsize-tauri/src/utils/: format.ts  updateFileTree.ts  useNotification.ts
installer-linux/: Cargo.toml
installer-linux/assets/: bonsize-ui.desktop
installer-linux/src/: main.rs
src/: cli.rs  config.rs  display.rs  formatter.rs  lib.rs  main.rs  output_format.rs  scanner.rs
src/display/: formatter.rs  mod.rs  output_format.rs
src/scanner/: file_model.rs  mod.rs  tree_size.rs
