[package]
name = "bonsize"
version = "1.2.0"
edition = "2024"
description = "A CLI tool to display directory tree sizes"
license = "WTFPL"

[package.metadata.deb]
name = "bonsize"
maintainer = "Mathieu Marthy <mathieu.marthy@gmail.com>"
copyright = "2026, Mathieu Marthy"
section = "utils"
priority = "optional"
assets = [
    ["target/release/bonsize", "usr/bin/", "755"],
    ["assets/icon.png", "usr/share/icons/hicolor/256x256/apps/bonsize.png", "644"],
]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
dirs = "6"
rayon = { version = "1.11.0" }
