[package]
name = "bonsize-cli"
version = "1.2.0"
edition = "2024"
description = "A CLI tool to display directory tree sizes"
license = "WTFPL"

[package.metadata.deb]
name = "bonsize"
maintainer = "Mathieu Marthy <mathieu.marthy@gmail.com>"
copyright = "2026, Mathieu Marthy"
section = "utils"
priority = "optional"
assets = [
    ["../target/release/bonsize", "usr/bin/bonsize", "755"],
    ["../assets/icon.png", "usr/share/icons/hicolor/256x256/apps/bonsize.png", "644"],
]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
bonsize-core = { path = "../bonsize-core" }
rayon = "1.11.0"

[[bin]]
name = "bonsize"
path = "src/main.rs"
