[package]
name = "bonsize-installer"
version = "2.0.0"
edition = "2024"
description = "Combined installer for bonsize tree size tool (CLI and GUI)"
license = "WTFPL"
publish = false

[package.metadata.deb]
name = "bonsize-linux-suite"
maintainer = "Mathieu Marthy <mathieu.marthy@gmail.com>"
copyright = "2026, Mathieu Marthy"
section = "utils"
priority = "optional"
depends = "$auto, libwebkit2gtk-4.1-0 | libwebkit2gtk-4.0-37"
assets = [
    [
        "../target/release/bonsize",
        "usr/bin/bonsize",
        "755",
    ],
    [
        "../target/release/bonsize-tauri",
        "usr/bin/bonsize-ui",
        "755",
    ],
    [
        "../assets/icon.png",
        "usr/share/icons/hicolor/256x256/apps/bonsize.png",
        "644",
    ],
    [
        "assets/bonsize-ui.desktop",
        "usr/share/applications/bonsize-ui.desktop",
        "644",
    ],
]
