[package]
name = "bonsize-gui"
version = "2.0.0"
description = "Bonsize GUI"
edition = "2021"

[package.metadata.deb]
name = "bonsize GUI"
maintainer = "Mathieu Marthy <mathieu.marthy@gmail.com>"
copyright = "2026, Mathieu Marthy"
section = "utils"
priority = "optional"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bonsize_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bonsize-core = { path = "../../bonsize-core" }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
